Set up a simple express app

--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "Parking Lot Manager - Ex 1 Cloud Computing 3031",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "jest"
   },
   "author": "Tomer Groisman",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
+  }
 }
